# Stat-Arbitrage-with-Python-and-C-

./: .gitignore  README.md
project/: backtest.pyd  test.py
project/data/: NIO.csv  TSLA.csv  data_Spread_Z.csv
project/notebooks/: alphaVan_Data.ipynb
project/src/: CMakeLists.txt  backtest.cpp  setup.py
